set the divider responsive in footer, update readme file

--- a/src/components/shared/footer/Footer.css
+++ b/src/components/shared/footer/Footer.css
@@ -14,6 +14,12 @@
     width: 75px;
     border-radius: 100%;
 }
+@media only screen and (max-width: 767px) {
+    .social-network img {
+        height: 50px;
+        width: 50px;
+    }
+}
 
 .social-network > a:not(:last-child) {
     margin-right: 10px;
